# pyliic

./: README.md  default.nix  pyproject.toml  shell.nix  utils.py
pyliic/: __init__.py  data.py  eckart.py  fileio.py  geometry_generator.py  gmatrix.py  interpolation.py  pyliic.py  utils.py
